# Machine_Learning_Projects

./: Dockerfile  README.md  fly.toml  main.py  notebook.ipynb  notebook.py  predict.py  pyproject.toml  train.py  ui_app.py
dataset/: README.md  dataset-metadata.json
